crates/account-macro/tests/account_attribute/enum.fail.stderr
error: NoUninit requires the enum to be an explicit #[repr(Int)]
 --> tests/account_attribute/enum.fail.rs:8:1
  |
8 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `bytemuck::NoUninit` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Deriving AnyBitPattern is not supported for enums
 --> tests/account_attribute/enum.fail.rs:8:1
  |
8 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `bytemuck::AnyBitPattern` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid account type
 --> tests/account_attribute/enum.fail.rs:8:1
  |
8 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `account` (in Nightly builds, run with -Z macro-backtrace for more info)
